Fixed scrollbars and async refresh errors

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   min-width: 320px;
-  min-height: 100vh;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
